[package]
name = "ekezet-srv"
version = "0.1.0"
description = "Source code of ekezet.com"
repository = "https://github.com/atomgomba/ekezet-rs"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib"]

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
clap = { version = "3", features = ["derive"] }
ekezet-lib = { path = "lib" }
mime = "0.3.16"
openssl = "0.10.40"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
sycamore = { version = "0.7.0", features = ["ssr"] }

[build-dependencies]
base64 = "0.13.0"
grass = "0.11.0"
minifier = "^0.0.1"

[profile.release]
lto = true

[profile.release.package.ekezet-lib]
opt-level = "s"

