[package]
name = "ekezet-srv"
version = "0.1.0"
description = "Source code of ekezet.com"
repository = "https://github.com/atomgomba/ekezet-rs"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib"]

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
clap = { version = "4.5.7", features = ["derive"] }
ekezet-lib = { path = "lib" }
mime = "0.3.16"
openssl = "0.10.64"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
sycamore = { version = "0.8.2", features = ["ssr"] }

[build-dependencies]
base64 = "0.22.1"
grass = "0.13.3"
minifier = "0.3.0"

[profile.release]
lto = true

[profile.release.package.ekezet-lib]
opt-level = "s"

