[package]
name = "ekezet-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = [
    'CssStyleDeclaration',
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'MouseEvent',
    'Window',
]
